--- a/index.html
+++ b/index.html
@@ -32,43 +32,53 @@
 
                     <div class="form-group">
                         <label for="primaryColor">Primary Color:</label>
-                        <input
-                            type="text"
-                            name="primary"
-                            maxlength="7"
-                            class="form-control"
-                        />
-                        <input type="color" name="primary" id="primaryColor" />
+                        <div class="color-input">
+                            <input
+                                type="text"
+                                name="primary"
+                                maxlength="7"
+                                class="form-control"
+                            />
+                            <input
+                                type="color"
+                                name="primary"
+                                id="primaryColor"
+                            />
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label for="secondaryColor">Secondary Color:</label>
-                        <input
-                            type="text"
-                            name="secondary"
-                            maxlength="7"
-                            class="form-control"
-                        />
-                        <input
-                            type="color"
-                            name="secondary"
-                            id="secondaryColor"
-                        />
+                        <div class="color-input">
+                            <input
+                                type="text"
+                                name="secondary"
+                                maxlength="7"
+                                class="form-control"
+                            />
+                            <input
+                                type="color"
+                                name="secondary"
+                                id="secondaryColor"
+                            />
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label for="tertiaryColor">Tertiary Color:</label>
-                        <input
-                            type="text"
-                            name="tertiary"
-                            maxlength="7"
-                            class="form-control"
-                        />
-                        <input
-                            type="color"
-                            name="tertiary"
-                            id="tertiaryColor"
-                        />
+                        <div class="color-input">
+                            <input
+                                type="text"
+                                name="tertiary"
+                                maxlength="7"
+                                class="form-control"
+                            />
+                            <input
+                                type="color"
+                                name="tertiary"
+                                id="tertiaryColor"
+                            />
+                        </div>
                     </div>
                 </div>
             </div>
